--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
+    "@babylonjs/core": "^5.14.1",
+    "@babylonjs/gui": "^5.14.1",
+    "@babylonjs/gui-editor": "^5.14.1",
+    "@babylonjs/inspector": "^5.14.1",
+    "@babylonjs/loaders": "^5.14.1",
+    "@babylonjs/materials": "^5.14.1",
+    "@babylonjs/serializers": "^5.14.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -51,6 +58,7 @@
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
+    "typescript": "^4.7.4",
     "web-vitals": "^2.1.4",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
@@ -135,5 +143,10 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "sass": "^1.53.0"
   }
 }
