--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
   "devDependencies": {
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "raw-loader": "^4.0.2",
     "sass": "^1.53.0"
   }
 }
